<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".user.ResInsertFragment">

        <ImageView
            android:id="@+id/ivRes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/no_image" />



        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivRes">

            <Button
                android:id="@+id/btTakePicture"
                style="@style/styleButton"
                android:background="@drawable/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/textTakePicture" />

            <Button
                android:id="@+id/btPickPicture"
                style="@style/styleButton"
                android:background="@drawable/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/textPickPicture" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvResName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/textResName"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/ivRes"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <EditText
            android:id="@+id/etResName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/tvResName"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/tvResAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/textResAddress"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/ivRes"
            app:layout_constraintTop_toBottomOf="@+id/tvResName" />

        <EditText
            android:id="@+id/etResAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/etResName"
            app:layout_constraintTop_toBottomOf="@+id/etResName" />

        <TextView
            android:id="@+id/tvResTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/textResPhone"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/ivRes"
            app:layout_constraintTop_toBottomOf="@+id/tvResAddress" />

        <EditText
            android:id="@+id/etResTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="phone"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/etResAddress"
            app:layout_constraintTop_toBottomOf="@+id/etResAddress" />

        <TextView
            android:id="@+id/tvResHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/textResHours"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/ivRes"
            app:layout_constraintTop_toBottomOf="@+id/tvResTel" />

        <EditText
            android:id="@+id/etResHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/etResTel"
            app:layout_constraintTop_toBottomOf="@+id/etResTel" />

        <TextView
            android:id="@+id/tvResCategoryInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/textResCategory"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/ivRes"
            app:layout_constraintTop_toBottomOf="@+id/tvResHours" />

        <Spinner
            android:id="@+id/spCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/tvResCategoryInfo"
            app:layout_constraintTop_toBottomOf="@+id/etResHours" />

        <TextView
            android:id="@+id/tvResEnable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/textResEnable"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/ivRes"
            app:layout_constraintTop_toBottomOf="@+id/tvResCategoryInfo" />


        <Switch
            android:id="@+id/swResEnable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/textEnable"
            app:layout_constraintStart_toEndOf="@+id/tvResEnable"
            app:layout_constraintTop_toBottomOf="@+id/spCategory" />

        <Button
            android:id="@+id/btnInsert"
            style="@style/styleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button"
            android:text="@string/textInsert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnCancel"
            app:layout_constraintTop_toBottomOf="@+id/swResEnable" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/styleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button"
            android:text="@string/textInsertCancel"
            app:layout_constraintBottom_toBottomOf="@+id/btnInsert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnInsert" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>